# itonda

./: .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  lefthook.yml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
apps/agent/: Cargo.toml
apps/agent/src/: config.rs  connection.rs  identity.rs  main.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/server/: Cargo.toml  Dockerfile  Dockerfile.dev
apps/server/src/: lib.rs  main.rs  state.rs
apps/server/src/api/: error.rs  extractor.rs  mod.rs  openapi.rs  response.rs
apps/server/src/api/media/: handlers.rs  routes.rs  schemas.rs
apps/server/src/config/: app.rs  mod.rs  secrets.rs  settings.rs  store.rs
apps/server/src/events/: import.rs  mod.rs
apps/server/src/storage/: path.rs
apps/server/src/websocket/: agent.rs  imports.rs  mod.rs
apps/server/src/workers/: jobs.rs  mod.rs  worker.rs
apps/server/src/workers/handlers/: import.rs  sync.rs
apps/server/tests/api/media/: get_media.rs  import_media.rs  media.rs  mod.rs
apps/server/tests/common/: app.rs  mod.rs  response.rs
apps/server/tests/common/fixtures/: media.rs
apps/web/: Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/web/src/: home.tsx  index.css  main.tsx  test.ts
apps/web/src/api/: generated.d.ts
apps/web/src/app/: notificationContext.tsx  notificationProvider.tsx  router.tsx
apps/web/src/app/routes/: error.tsx  not-found.tsx
apps/web/src/components/ui/header/: Header.test.tsx  Header.tsx
apps/web/src/components/ui/notification/: Item.test.tsx  Item.tsx  Viewport.tsx
apps/web/src/components/ui/sidebar/: Sidebar.test.tsx  Siderbar.tsx
apps/web/src/hooks/: use-notification.ts
apps/web/src/lib/: AxiosInterceptor.tsx  api-client.ts  react-query.ts
apps/web/src/test/: test-utils.tsx
crates/database/: Cargo.toml
crates/database/.sqlx/: query-1732ad9b456aad559dc467498d7a4a31d00330ddf4c3514c0808f66a775c7afd.json  query-1768194dda972e68916e8f8957244c25b9d6115ce3c61ce0a914ee636a0137c5.json  query-2ec19b84aca583db3b61b9c1cd9639abad5db1c0a986a4295a7297ff980090ac.json  query-4a18bf7fc2748042e6771902ce9e5e9554318933fcbf7e795dd5bd9b5c40f992.json  query-6a9803874f1a3003698b31d602970ba70980ceb1b9a56d2dfe9746bc7a59199a.json  query-a3faa5a0370abf44888d444d52b49ce55cfa883c0ea33a829e21ba6c3cb9a026.json  query-e16af3e72ebee6be00f422d3d4cf4a51b81c1315660a58dade9489074e8c9661.json
crates/database/migrations/: 20260710213257_import_feature.sql  20260718151140_agent_structure.sql  20260719185336_db_structure.sql
crates/database/src/: connection.rs  error.rs  lib.rs  mod.rs  test_utils.rs
crates/database/src/agent/: mod.rs  models.rs  queries.rs  tests.rs
crates/database/src/media/: models.rs  queries.rs  tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: http.rs  lib.rs
crates/domain/src/media/: errors.rs  import.rs  mod.rs  models.rs  service.rs
crates/domain/src/protocol/: agent.rs  message.rs  mod.rs  server.rs
crates/domain/src/store/: codec.rs  error.rs  mod.rs  toml.rs
crates/domain/src/storefront/: models.rs
crates/domain/src/storefronts/: lib.rs  mod.rs  models.rs  registry.rs  traits.rs
crates/domain/src/storefronts/steam/: client.rs  mapper.rs  mod.rs  models.rs  tests.rs
crates/domain/src/sync/: context.rs  errors.rs  events.rs  mod.rs  pipeline.rs
crates/domain/src/sync/steps/: identify.rs
crates/storefronts/: Cargo.toml
crates/storefronts/src/: error.rs  lib.rs  models.rs  registry.rs  traits.rs
crates/storefronts/src/steam/: client.rs  mapper.rs  mod.rs  tests.rs
