[workspace]
members = [
    "apps/cli",
    "apps/server",
    "apps/agent",
    "crates/database",
    "crates/domain",
]
resolver = "2"


[workspace.dependencies]
serde = "1"
thiserror = "2"
uuid = "1"
chrono = "0.4"
tokio = {version="1", features=["macros"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
lefthook = "2.1.10"
