[package]
name = "itonda-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
itonda-domain = { path = "../../crates/domain" }

local-ip-address = "0.6.13"
hostname = "0.4"
futures-util = "0.3"
tokio-tungstenite = "0.26"
anyhow = "1"
toml = "1.1.2"
dirs = "6"
serde_json = "1"
axum = {version="0.8.9", features  = ["ws"]}
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
