[package]
name = "itonda-server"
version = "0.1.0"
edition = "2024"

[dependencies]
itonda-database = { path = "../../crates/database" }
itonda-domain = { path = "../../crates/domain" }
itonda-storefronts = { path = "../../crates/storefronts" }

anyhow = "1"
toml = "1.1.2"
dirs = "6"
serde_json = "1"
axum = {version="0.8.9", features  =["ws"]}
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
sqlx = { version = "0.8" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
