[package]
name = "itonda-database"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite"
] }
