[package]
name = "itonda-storefronts"
version = "0.1.0"
edition = "2024"

[dependencies]
itonda-domain = { path = "../domain" }

serde_json = "1.0"
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing = {workspace=true}

reqwest = { workspace=true, features = ["json"] }
reqwest-middleware ={workspace=true}
reqwest-tracing ={workspace=true}

